--- a/style.css
+++ b/style.css
@@ -24,3 +24,13 @@ h3 {
     text-transform: none;
     letter-spacing: 0.1em;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+}
